--- a/WeldingPassportsApp/WeldingPassportsApp/Views/Account/ConfirmEmail.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/Account/ConfirmEmail.cshtml
@@ -1,4 +1,4 @@
-﻿@using Microsoft.AspNetCore.Mvc.Localization
+﻿@*@using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
 
-<h3>Thank you for confirming your email</h3>
+<h3>Thank you for confirming your email</h3>*@
