--- a/WeldingPassportsApp/WeldingPassportsApp/Views/CompanyContacts/Details.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/CompanyContacts/Details.cshtml
@@ -3,7 +3,7 @@
 @model CompanyContactDetailsViewModel
 
 @{
-    ViewData["Title"] = "DetailsView";
+    ViewData["Title"] = @Localizer["Contact Details"];
     var returnUrl = ViewBag.ReturnUrl;
     var currentUrl = ViewBag.CurrentUrl;
 }
