--- a/WeldingPassportsApp/WeldingPassportsApp/Views/CompanyContacts/Edit.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/CompanyContacts/Edit.cshtml
@@ -3,7 +3,7 @@
 @model CompanyContactEditViewModel
 
 @{
-    ViewData["Title"] = "Contact Edit";
+    ViewData["Title"] = @Localizer["Edit Contact"];
     string returnUrl = ViewBag.ReturnUrl;
     string currentUrl = ViewBag.CurrentUrl;
 }
