--- a/WeldingPassportsApp/WeldingPassportsApp/Views/PEPassports/Create.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/PEPassports/Create.cshtml
@@ -2,7 +2,7 @@
 @inject IViewLocalizer Localizer
 @model PEPassportCreateViewModel
 @{
-    ViewData["Title"] = Localizer["PEpassport Create"];
+    ViewData["Title"] = Localizer["Create PE Passport"];
     var returnUrl = ViewBag.ReturnUrl;
 }
 <h1>@Localizer["Create PE Passport"]</h1>
@@ -23,7 +23,7 @@
                 <label asp-for="TrainingCenterID" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
                     <select asp-for="TrainingCenterID" class="form-control" asp-items="@Model.TrainingCenterSelectList">
-                        <option value="">@Localizer["Choose training center"]</option>
+                        <option value="">@Localizer["Choose Training Center"]</option>
                     </select>
                     <span asp-validation-for="TrainingCenterID" class="text-danger"></span>
                 </div>
