--- a/WeldingPassportsApp/WeldingPassportsApp/Views/PEPassports/Details.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/PEPassports/Details.cshtml
@@ -3,7 +3,7 @@
 @model PEPassportDetailsViewModel
 
 @{
-    ViewData["Title"] = Localizer["PEpassport Details"];
+    ViewData["Title"] = Localizer["PE Passport Details"];
     var returnUrl = ViewBag.ReturnUrl;
     var currentUrl = ViewBag.CurrentUrl;
 }
