--- a/WeldingPassportsApp/WeldingPassportsApp/Views/Welders/Create.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/Welders/Create.cshtml
@@ -3,7 +3,7 @@
 @model PEWelderEditViewModel
 
 @{
-    ViewData["Title"] = "PEWelder Create";
+    ViewData["Title"] = Localizer["Create PE Welder"];
     string returnUrl = ViewBag.ReturnUrl;
 }
 
