--- a/WeldingPassportsApp/WeldingPassportsApp/Views/Welders/Details.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/Welders/Details.cshtml
@@ -3,7 +3,7 @@
 @model PEWelderDetailsViewModel
 
 @{
-    ViewData["Title"] = Localizer["Welders Details"];
+    ViewData["Title"] = Localizer["Welder Details"];
     var returnUrl = ViewBag.ReturnUrl;
     var currentUrl = ViewBag.CurrentUrl;
 }
