--- a/WeldingPassportsApp/WeldingPassportsApp/Views/Welders/Edit.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/Welders/Edit.cshtml
@@ -3,7 +3,7 @@
 @model Application.ViewModels.PEWelderEditViewModel
 
 @{
-    ViewData["Title"] = "PE Welder Edit";
+    ViewData["Title"] = Localizer["Edit PE Welder"];
     string returnUrl = ViewBag.ReturnUrl;
 }
 
