--- a/WeldingPassportsApp/WeldingPassportsApp/Views/Companies/Create.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/Companies/Create.cshtml
@@ -3,7 +3,7 @@
 @model CompanyCreateViewModel
 
 @{
-    ViewData["Title"] = "Company Create";
+    ViewData["Title"] = "Create company";
     string returnUrl = ViewBag.ReturnUrl;
     string currentUrl = ViewBag.CurrentUrl;
 }
