--- a/WeldingPassportsApp/WeldingPassportsApp/Views/Companies/Edit.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/Companies/Edit.cshtml
@@ -3,12 +3,12 @@
 @model CompanyEditViewModel
 
 @{
-    ViewData["Title"] = "Company Edit";
+    ViewData["Title"] = @Localizer["Edit Company"];
     string returnUrl = ViewBag.ReturnUrl;
     string currentUrl = ViewBag.CurrentUrl;
 }
 
-<h1>@Localizer["Edit company"]</h1>
+<h1>@Localizer["Edit Company"]</h1>
 <hr />
 <div class="row">
     <div class="col-md-12">
@@ -38,7 +38,7 @@
             <div class="form-group row">
                 <label asp-for="WebPage" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
-                    <input asp-for="WebPage" class="form-control" placeholder="@Localizer["Web page"]" />
+                    <input asp-for="WebPage" class="form-control" placeholder="@Localizer["Web Page"]" />
                 </div>
                 <span asp-validation-for="WebPage" class="text-danger"></span>
             </div>
@@ -47,7 +47,7 @@
                 <label asp-for="AddressID" class="col-sm-2 col-form-label"></label>
                 <div class="input-group col-sm-10">
                     <Select asp-for="AddressID" class="form-control" asp-items="@Model.AddressSelectList">
-                        <option value="" selected disabled hidden>@Localizer["Choose address"]</option>
+                        <option value="" selected disabled hidden>@Localizer["Choose Address"]</option>
                     </Select>
                     <div class="input-group-append">
                         <a class="btn btn-primary" type="button" asp-controller="@typeof(AddressesController).GetNameOfController()" asp-action="@nameof(AddressesController.Create)" asp-route-returnUrl="@currentUrl">Create</a>
