--- a/WeldingPassportsApp/WeldingPassportsApp/Views/Examinations/Edit.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/Examinations/Edit.cshtml
@@ -3,7 +3,7 @@
 @model ExaminationEditViewModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = @Localizer["Edit Examination"];
     var returnUrl = ViewBag.ReturnUrl;
 }
 
