--- a/WeldingPassportsApp/WeldingPassportsApp/Views/TrainingCenters/Details.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/TrainingCenters/Details.cshtml
@@ -3,7 +3,7 @@
 @model TrainingCenterDetailsViewModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = Localizer["Training Center Details"];
     var returnUrl = ViewBag.ReturnUrl;
     var currentUrl = ViewBag.CurrentUrl;
 }
