--- a/WeldingPassportsApp/WeldingPassportsApp/Views/Companies/Edit.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/Companies/Edit.cshtml
@@ -12,7 +12,7 @@
 <hr />
 <div class="row">
     <div class="col-md-12">
-        <form asp-controller="@typeof(CompaniesController).GetNameOfController()" asp-action="@nameof(CompaniesController.Create)" asp-route-returnUrl="@returnUrl" method="post" class="mt-3">
+        <form asp-controller="@typeof(CompaniesController).GetNameOfController()" asp-action="@nameof(CompaniesController.Edit)" asp-route-returnUrl="@returnUrl" method="post" class="mt-3">
             <input hidden asp-for="EncryptedID" />
             <div class="form-group row">
                 <label asp-for="CompanyName" class="col-sm-2 col-form-label"></label>
