--- a/WeldingPassportsApp/WeldingPassportsApp/Views/CompanyContacts/Create.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/CompanyContacts/Create.cshtml
@@ -27,12 +27,15 @@
             </div>
             <div class="form-group row">
                 <label asp-for="CompanyID" class="col-sm-2 col-form-label"></label>
-                <div class="col-sm-10">
+                <div class="col-sm-10 input-group">
                     <select asp-for="CompanyID" class="form-control" asp-items="@Model.CompanySelectList">
                         <option value="" selected disabled hidden>@Localizer["Choose Company"]</option>
                     </select>
-                    <span asp-validation-for="CompanyID" class="text-danger"></span>
+                    <div class=" input-group-append">
+                        <a asp-controller="@typeof(CompaniesController).GetNameOfController()" asp-action="@nameof(ContactsController.Create)" asp-route-returnUrl="@currentUrl" class="btn btn-primary" type="button">@Localizer["Create"]</a>
+                    </div>
                 </div>
+                <span asp-validation-for="CompanyID" class="text-danger"></span>
             </div>
             <div class="form-group row">
                 <label asp-for="JobTitle" class="col-sm-2 col-form-label"></label>
