--- a/WeldingPassportsApp/WeldingPassportsApp/Views/_ViewImports.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/_ViewImports.cshtml
@@ -6,3 +6,7 @@
 @using WeldingPassportsApp.Controllers
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+@inject SignInManager<IdentityUser> signInManager
