--- a/WeldingPassportsApp/WeldingPassportsApp/Views/Shared/_SelectLanguagePartial.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/Shared/_SelectLanguagePartial.cshtml
@@ -19,7 +19,7 @@
     <form id="selectLanguage" asp-controller="@typeof(HomeController).GetNameOfController()"
           asp-action="@nameof(HomeController.SetLanguage)" asp-route-returnUrl="@returnUrl"
           method="post" class="form-horizontal" role="form">
-        <select name="culture" onchange="this.form.submit();" asp-for="@requestCulture.RequestCulture.UICulture.Name" asp-items="cultureItems">
+        <select title="culture" name="culture" onchange="this.form.submit();" asp-for="@requestCulture.RequestCulture.UICulture.Name" asp-items="cultureItems">
         </select>
     </form>
 </div>
