--- a/WeldingPassportsApp/WeldingPassportsApp/Views/Certificates/Edit.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/Certificates/Edit.cshtml
@@ -15,10 +15,13 @@
     <input hidden asp-for="EncryptedID" />
     <div class="form-group row">
         <label asp-for="AVNumber" class="col-sm-2 col-form-label"></label>
-        <div class="col-sm-10">
+        <div class="col-sm-10 input-group">
+            <div class="input-group-prepend">
+                <span id="Letter" class="input-group-text">@Model.Letter</span>
+            </div>
             <input asp-for="AVNumber" class="form-control" placeholder="AV number" readonly>
-            <span asp-validation-for="AVNumber" class="text-danger"></span>
         </div>
+        <span asp-validation-for="AVNumber" class="text-danger"></span>
     </div>
     <div class="form-group row">
         <label asp-for="FirstName" class="col-sm-2 col-form-label"></label>
