--- a/WeldingPassportsApp/WeldingPassportsApp/Views/PEPassports/Index.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/PEPassports/Index.cshtml
@@ -108,6 +108,7 @@
         {
         <tr class="@passport.Color">
             <td>
+                @Html.DisplayFor(vm => passport.Letter)
                 @Html.DisplayFor(vm => passport.AVNumber)
             </td>
             <td>
