--- a/WeldingPassportsApp/WeldingPassportsApp/Views/Welders/Details.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/Welders/Details.cshtml
@@ -67,6 +67,7 @@
         {
             <tr class="@passport.Color">
                 <td>
+                    @Html.DisplayFor(modelItem => passport.Letter)
                     @Html.DisplayFor(modelItem => passport.AVNumber)
                 </td>
                 <td>
