--- a/WeldingPassportsApp/WeldingPassportsApp/Views/Certificates/Details.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/Certificates/Details.cshtml
@@ -16,6 +16,7 @@
         @Html.DisplayNameFor(model => model.AVNumber)
     </dt>
     <dd class="col-sm-9">
+        @Html.DisplayFor(model => model.Letter)
         @Html.DisplayFor(model => model.AVNumber)
     </dd>
     <dt class="col-sm-3">
