--- a/WeldingPassportsApp/WeldingPassportsApp/Views/Welders/Index.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/Welders/Index.cshtml
@@ -88,6 +88,7 @@
                     @Html.DisplayFor(vm => welder.LastName)
                 </td>
                 <td>
+                    @Html.DisplayFor(vm => welder.Letter)
                     @Html.DisplayFor(vm => welder.AVNumber)
                 </td>
                 <td>
