Select Welder filter

--- a/WeldingPassportsApp/WeldingPassportsApp/Views/PEPassports/Create.cshtml
+++ b/WeldingPassportsApp/WeldingPassportsApp/Views/PEPassports/Create.cshtml
@@ -68,5 +68,6 @@
 
     <script src="~/js/PEPassports/GetTrainingCenterLetterByTrainingCenterID.js"></script>
     <script src="~/js/PEPassports/GetPEPassportMaxAVNumber.js"></script>
-    <script src="~/js/PEPassports/ResetPassportCreate.js"></script>
+    <script src="~/js/Welders/GetWeldersNotFromTrainingCenterID.js"></script>
+    <script src="~/js/ResetSelect.js"></script>
 }
